about me x-overflow fix

--- a/index.css
+++ b/index.css
@@ -119,7 +119,7 @@ footer p{
 .container{
     display: flex;
     flex-direction: column;
-    margin-top:100px;
+    margin-top:50px;
     padding: 0 2em;
     align-items: center;
     justify-content: center;
@@ -483,9 +483,9 @@ form textarea{
         position:absolute;
         transform: rotate(10deg);
         font-family: BallpenScript;
-        font-size: 3em;
+        font-size: 2.5em;
         top:0%;
-        left:50%;
+        left:30%;
         line-height: 1.2;
     }
 }
@@ -514,7 +514,7 @@ form textarea{
     position: relative;
     width: 100%;
     max-width: 950px;
-    margin: 0 1em 0 1em;
+    margin: 0 auto;
     max-height: 725px;
     background-color: #FBFBFB;
     overflow-y: scroll;
